--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
 
     <section id="intro" style="background: url(img/buddha2.jpg) center center no-repeat; background-size: cover;" class="intro-section pb-2">
-      <div class="container text-center">
+      <div class="intro">
         <div data-animate="fadeInDown" class="logo"><img class="selfie" src= "img/selfie2.jpg" width=400px></div>
         <h1 data-animate="fadeInDown" class="text-shadow mb-5">Kyle Hassett</h1>
         <p data-animate="slideInUp" class="h3 text-shadow text-400">Writer of Words and Code</p>
@@ -195,5 +195,8 @@
 <style>
   body {
     background-image: url("img/white_wall.png");
+  }
+  .intro {
+    border-radius: 50%;
   }
 </style>
