--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/selfie2.jpg">
+    <link rel="shortcut icon" href="img/vue.png">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -170,7 +170,7 @@
             <p>© 2018 Kyle Hassett. All rights reserved. Photos taken by me.</p>
           </div>
           <div class="col-12 mt-4">
-            <p class="template-bootstrapious">Theme by<a href="https://www.bootstrapious.com">Bootstrapious</a>
+            <p class="template-bootstrapious">Theme by <a href="https://www.bootstrapious.com">Bootstrapious</a>
               <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
             </p>
           </div>
@@ -193,4 +193,7 @@
 </html>
 
 <style>
+  body {
+    background-image: url("img/white_wall.png");
+  }
 </style>
