--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </header>
 
     <section id="intro" style="background: url(img/buddha2.jpg) center center no-repeat; background-size: cover;" class="intro-section pb-2">
-      <div class="intro">
-        <div data-animate="fadeInDown" class="logo"><img class="selfie" src= "img/selfie2.jpg" width=400px></div>
+      <div class="container text-center">
+        <div data-animate="fadeInDown" class="logo"><img class="logo" src= "img/selfie2.jpg" width=400px></div>
         <h1 data-animate="fadeInDown" class="text-shadow mb-5">Kyle Hassett</h1>
         <p data-animate="slideInUp" class="h3 text-shadow text-400">Writer of Words and Code</p>
       </div>
