--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
           <!-- /.6-->
           <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-            <p>© 2018 Kyle Hassett. All rights reserved. Photos taken by me.</p>
+            <p>© 2018 Kyle Hassett. All rights reserved.</p>
           </div>
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">Theme by <a href="https://www.bootstrapious.com">Bootstrapious</a>
