--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Intro</a></li>
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About</a></li>
-              <li class="nav-item"><a href="#references" class="nav-link link-scroll">Capstone</a></li>
+              <li class="nav-item"><a href="#projects" class="nav-link link-scroll">Projects</a></li>
               <li class="nav-item"><a href="img/resume.png" target="_blank" class="nav-link link-scroll">Resume</a></li>
               <li class="nav-item"><a href="https://www.linkedin.com/in/kyle-hassett-/" target="_blank" class="nav-link link-scroll">LinkedIn</a></li>
               <li class="nav-item"><a href="https://github.com/kyle-hassett" target="_blank" class="nav-link link-scroll">Github</a></li>
@@ -110,7 +110,7 @@
       </div>
     </section>
 
-    <section id="references">
+    <section id="projects">
       <div class="container">
         <div class="col-sm-12">
           <div class="mb-5 text-center">
