--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       </div>
                     </div></a>
                   <div data-images="img/health_home.png,img/health.png,img/graph.png" class="sr-only reference-description">
-                    <p>For the majority of my life, I was in <strong>bad shape</strong>. I ate whatever I wanted, went to the gym a few times a month (maybe) and that was my existence.</p>
+                    <p>For the majority of my life, I was in bad shape. I ate whatever I wanted, went to the gym a few times a month (maybe) and that was my existence.</p>
 
                     <p>But back in 2017, enough was enough. I got my act together and ended up losing over 70 pounds. Since then, I've become more and more interested in what it means to be healthy. Most people picture a salad and some dumbbells when they think of health. But through my research, I've realized that there's more to it than that. So I built an app that will help a user enter and track what I've defined as the four main areas of good health: <strong>Sleep, Movement, Nutrition, and Stress Management.</strong></p> 
 
